--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Codeang2</title>
+  <title>Firestore App</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
